# AI_Playground

./: README.md
AI Agents/Ultimate_AI_IDE/: .gitignore  .uaide_index.json  CHANGELOG.md  LICENSE  TODO.md  config.example.json  events.jsonl  mcp_servers.json  pyproject.toml  requirements.txt  rules.json  setup.py
AI Agents/Ultimate_AI_IDE/commits/: PHASE_0_SUMMARY.md  PHASE_1.4.0_SUMMARY.md  PHASE_1.6.0_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  TESTS_AND_SCRIPTS_UPDATE.md
AI Agents/Ultimate_AI_IDE/docs/: AI_CONTEXT.md  API.md  CLI_MODULARIZATION_STEPS.md  CODEBASE_STRUCTURE.md  DOCUMENTATION_UPDATE_v1.3.0.md  EXTENDING_GUIDE.md  FEATURE_STATUS_ANALYSIS.md  GUI_GUIDE.md  GUI_SETUP.md  LLAMA_CPP_SETUP.md  PHASE_1_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  QUICKSTART.md  ROADMAP_EXTENDED.md  ROADMAP_v1.3.0.md  ROADMAP_v1.4.0.md  STATUS.md  TESTING.md  TESTING_GUIDE.md  TEST_FIXES_SUMMARY.md  USER_GUIDE.md  USER_PREFERENCES.md  V1.3.0_CLI_REFERENCE.md  V1.4.0_COMPLETION_PLAN.md  V1.4.0_FINAL_STATUS.md  V1.5.0_FINAL_SUMMARY.md  V1.5.0_PROGRESS.md
AI Agents/Ultimate_AI_IDE/scripts/: README.md  debug_init.bat  debug_split.bat  demo_phase2.bat  demo_v1.4.0.bat  quick_test_fix.bat  quick_test_phase2.bat  run_gui.bat  run_tests.bat  run_tests_coverage.bat  run_uaide.bat  setup.py  setup_venv.bat  test_cli_modular.bat  test_summary.bat  test_v1.4.0_complete.bat
AI Agents/Ultimate_AI_IDE/src/: __init__.py  main.py
AI Agents/Ultimate_AI_IDE/tests/: __init__.py  conftest.py  test_api_manager.py  test_automation_engine.py  test_bloat_detector.py  test_cli_commands.py  test_code_generator.py  test_codebase_indexer.py  test_codebert_embedder.py  test_config.py  test_context_manager.py  test_context_pruner.py  test_database.py  test_db_manager.py  test_dead_code_detector.py  test_dependency_manager.py  test_doc_manager.py  test_file_splitter.py  test_file_splitter_integration.py  test_graph_retriever.py  test_multimodal_retriever.py  test_project_manager.py  test_prompt_manager.py  test_quality_monitor.py  test_query_enhancer.py  test_refactorer.py  test_rule_manager.py  test_security_scanner.py  test_tester.py  (+8 more)
(+1656 files in other folders)
